samples/configmap_BBDD.yml
# 2. Usar en Pod
apiVersion: v1
kind: Pod
metadata:
  name: db-config-pod
spec:
  containers:
  - name: db-client
    image: docker.io/library/mariadb:latest
    command: ["sh", "-c", "echo Connecting to DB $MARIADB_DATABASE with user $MARIADB_USER && sleep 3600"]  
# Simula conexión a la base de datos
