samples/secret_sample.yml

# 2. Usar en Pod
apiVersion: v1
kind: Pod
metadata:
  name: secret-test-pod
spec:
  containers:
  - name: secret-test-container
    image: docker.io/library/alpine:latest
    command: ["sh", "-c", "echo The secret is $MY_SECRET && sleep 3600"]
